--- a/views/layout/main.handlebars
+++ b/views/layout/main.handlebars
@@ -4,21 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Tech Blog</title>
+  <link rel="stylesheet" href="Public/css/style.css">
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
+ <header class="display-flex justify-space-between align-center p-2">
+   <h1>Tech Blog</h1>
+ </header>
+
+ <nav>
+   {{#if logged_in}}
         <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button>
         {{else}}
@@ -27,15 +23,13 @@
       </nav>
     </header>
     <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{ body }}}
+ {{{ body }}}
     </main>
     <footer>
       
     </footer>
   </div>
-
-  <!-- Render script for logged in users only -->
+  
   {{#if logged_in}}
   <script src="Public/js/logout.js"></script>
   {{/if}}
