--- a/Deploy/views/profile.handlebars
+++ b/Deploy/views/profile.handlebars
@@ -6,12 +6,12 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New Project:</h3>
+    <h3>Create a New Post:</h3>
 
     <form class="form new-project-form">
       <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+        <label for="project-name">Post Name:</label>
+        <input class="form-input" type="text" id="post-name" name="post-name" />
       </div>
       <div class="form-group">
         <label for="project-funding">needed funding ($):</label>
@@ -27,7 +27,7 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if posts.length}}
   <div class="col-md-6 project-list">
     <h3>Current Projects:</h3>
 
@@ -37,7 +37,7 @@
         <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
+        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
