--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -23,7 +23,7 @@
     </form>
   </div>
 
-  {{#if posts.length}}
+  {{#if post.length}}
   <div class="col-md-6 post-list">
     <h3>Current posts:</h3>
 
